# recipe-chatbot

./: .gitignore  README.md  pyproject.toml
annotation/traces/: trace_20250727_175138_988661.json  trace_20250727_212834_344784.json  trace_20250727_212903_957713.json  trace_20250727_213118_621718.json  trace_20250727_213301_351698.json  trace_20250727_213436_845943.json  trace_20250727_213520_928017.json  trace_20250727_213737_599732.json  trace_20250727_213853_528549.json  trace_20250727_213951_041749.json  trace_20250727_214108_984686.json  trace_20250727_214221_466194.json  trace_20250727_214332_366664.json  trace_20250727_214558_980702.json  trace_20250727_214706_683456.json
backend/: utils.py
data/: sample_queries.csv
results/: results_20250727_215837.csv
